# bet-maker

./: .dockerignore  .env  Dockerfile  docker-compose.yaml  pyproject.toml  pytest.ini  run.py
src/: config.py  db.py  main.py  router.py  schemas.py  services.py
tests/: conftest.py  mock_services.py
tests/test_http_api/: test_bet_api.py
tests/test_schemas/: test_schema_bet.py  test_schema_event.py
tests/test_services/: test_bet_service.py  test_event_service.py
