[tool.poetry]
name = "bet-maker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
aioredis = "^2.0.1"
pydantic-settings = "^2.2.1"
pytest = "^8.1.1"
pytest-trio = "^0.8.0"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
